--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "lowdb": "^1.0.0",
+    "mongoose": "^9.1.2",
     "multer": "^2.0.2",
     "uuid": "^13.0.0"
   }
