--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ecoshare:ecoshare123@cluster0.yxsatwa.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/EcoShare_System_DB
 PORT=3000
