--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ecoshare",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,20 +11,12 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.13.4",
-    "body-parser": "^2.2.1",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
     "jwt-decode": "^4.0.0",
-    "lowdb": "^1.0.0",
-    "mongoose": "^9.1.2",
-    "multer": "^2.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
-    "recharts": "^3.6.0",
-    "uuid": "^13.0.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
