--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.13.4",
-    "jwt-decode": "^4.0.0",
+    "@clerk/clerk-react": "^5.59.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
